package ru.foobarbaz.entity;

public interface SolutionStatus {
    int EMPTY = 0;
    int SUCCESS = 1;
    int FAILED = 2;
    int ERROR = 3;
}
