@startuml

class User {
    String username
    String name
    String password
}

class UserAccount {
    String username
    String description
    Date registrationDate
    int solutions,
    int challenges,
    int rating
}

class Challenge {
    long challengeId
    String name
    String shortDescription
    User author
    Date created
    int rating
    int difficulty
    String[] tags
}

class ChallengeDetails {
    Challenge challenge
    String fullDescription
    String template
    String unitTest
    int views
    int solutions
}

class ChallengeUserStatus {
    ChallengeStatus status
}

enum ChallengeStatus {
    NOT_STARTED
    IN_PROGRESS
    SOLVED
}

class ChallengeUserRating {
    int rating
    int difficulty
}

class ChallengeUserDetails {
    UserAccount userAccount
    ChallengeDetails challengeDetails
    ChallengeUserStatus status
    ChallengeUserRating rating
    boolean bookmark
    Solution[] solutions
}

class Solution {
    long solutionNum
    ChallengeUserDetails holder
    SolutionStatus status
    String implementation
    TestResult[] testResults
}

enum SolutionStatus {
    EMPTY
    SUCCESS
    FAILED
    ERROR
}

class TestResult {
    String testName
    SolutionStatus status
    String message
}

class ChallengeComment {
    long commentId
    Challenge challenge
    User author
    String text
    Date created
    User[] likes
}


Challenge -> User
User -- UserAccount
Challenge -- ChallengeDetails
ChallengeDetails <- ChallengeUserDetails
ChallengeUserDetails -> UserAccount
ChallengeUserDetails -- ChallengeUserStatus
ChallengeUserStatus -- ChallengeStatus
ChallengeUserDetails -- ChallengeUserRating
ChallengeUserDetails *-- Solution
SolutionStatus -- TestResult
SolutionStatus -- Solution
Solution *-- TestResult
Challenge *-- ChallengeComment
ChallengeComment -> User
ChallengeComment <-> User

@enduml